feat :문의 기능개편해서 추가
